# aiml-python-basics-course-final

./: .gitignore  README.md  address_book.py  assistant.py  fields.py  handlers.py  note_book.py  pyproject.toml
src/: address_book.py  assistant.py  fields.py  handlers.py  main.py  note_book.py
